# django-trench

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  Dockerfile.heroku  LICENSE  MANIFEST.in  Makefile  README.rst  pytest.ini  schema.yml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: django-package.yml  pypi_publish_prod.yml  pypi_publish_test.yml
.tx/: config
docs/: backends.rst  conf.py  demo.rst  endpoints.rst  examples.rst  index.rst  installation.rst  introduction.rst  settings.rst
examples/client/: Dockerfile  package.json
testproject/: .env.example  .gitignore  Dockerfile  demo.py  docker-compose.yml  pytest.ini  requirements.txt  requirements_test.txt  settings.py  setup.cfg
testproject/requirements/: common.txt  default.txt  heroku.txt
testproject/testapp/: admin.py  models.py  serializers.py  settings.py  urls.py
testproject/tests/: conftest.py  test_add_mfa.py  test_authtoken_login.py  test_backends.py  test_commands.py  test_exceptions.py  test_first_step_authentication.py  test_queries.py  test_second_step_authentication.py  test_utils.py  utils.py
trench/: __init__.py  admin.py  apps.py  authentication.py  create_code.py  decorators.py  exceptions.py  models.py  permissions.py  responses.py  serializers.py  settings.py  trench  utils.py
trench/backends/: __init__.py  application.py  aws.py  base.py  basic_mail.py  provider.py  sms_api.py  templated_mail.py  twilio.py  yubikey.py
trench/command/: activate_mfa_method.py  authenticate_second_factor.py  authenticate_user.py  create_code.py  create_mfa_method.py  create_otp.py  create_secret.py  deactivate_mfa_method.py  generate_backup_codes.py  remove_backup_code.py  replace_mfa_method_backup_codes.py  set_primary_mfa_method.py  upsert_mfa_method.py  validate_backup_code.py
trench/domain/: models.py
trench/migrations/: 0001_initial.py  (+10 more)
(+58 files in other folders)
