[metadata]
name = django-trench
version = 0.0.1,
packages = find_packages()
description = REST Multi-factor authentication package for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/merixstudio/django-trench
author = Merixstudio
author_email = trench@merixstudio.com
install_requires =
    pyotp>=2.2.6
    twilio>=6.18.1
    yubico-client>=1.10.0
    smsapi-client>=2.2.5
classifiers =
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = trench
packages = find:
python_requires = >=3.5

[options.packages.find]
where = trench

[tool.black]
line-length
