[options]
install_requires =
    django-environ==0.4.5
    django-cors-headers==3.7.0
    djangorestframework-simplejwt>=4.8.0
    pyotp>=2.6.0
    twilio>=7.0.0
    Django >= 2.2


[mypy]
ignore_missing_imports = True

[flake8]
inline-quotes = "
max-line-length = 88
exclude =
    .git,
    __pycache__,
    manage.py,
    **/migrations/,

[coverage:run]
omit =
  *admin.py,
  *apps.py,
  *manage.py
  *migrations/*,
  *settings*,
  *tests/*,
  *trench/urls/*,
  *wsgi.py,
  *setup.py,

[isort]
line_length = 88
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true
balanced_wrapping = true
skip = manage.py, migrations, .tox
default_section = THIRDPARTY
known_standard_library = pytest
known_django = django
known_first_party = trench, tests
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
